--- a/.env.template
+++ b/.env.template
@@ -5,8 +5,7 @@ DB_PORT=5432
 DB_NAME=example_db
 DB_USER=root
 DB_PASS=example
-JWT_ACCESS_TOKEN_EXP_IN_SEC=3600
-JWT_REFRESH_TOKEN_EXP_IN_SEC=7200
-JWT_PUBLIC_KEY_BASE64=
-JWT_PRIVATE_KEY_BASE64=
+AUTH_SECRET=example
+AUTH_ACCESS_TOKEN_LIFE_SEC=3600
+AUTH_REFRESH_TOKEN_LIFE_SEC=7200
 DEFAULT_ADMIN_USER_PASSWORD=admin-example
