--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@nestjs/platform-express": "^9.3.8",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/uuid": "^9.0.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
