--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.3.8",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.3.8",
@@ -44,6 +45,7 @@
     "@nestjs/platform-express": "^9.3.8",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
+    "@sendgrid/mail": "^7.7.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/uuid": "^9.0.0",
     "bcrypt": "^5.1.0",
@@ -51,6 +53,7 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "joi": "^17.7.1",
+    "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -74,6 +77,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
+    "@types/nodemailer": "^6.4.7",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "@types/pg": "^8.6.6",
