--- a/package.json
+++ b/package.json
@@ -96,6 +96,9 @@
     "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.5"
   },
+  "overrides": {
+    "glob": "7.2.3"
+  },
   "jest": {
     "testResultsProcessor": "jest-sonar-reporter",
     "moduleFileExtensions": [
