--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "joi": "^17.7.1",
+    "n-digit-token": "^2.2.0",
+    "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
