--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "joi": "^17.7.1",
     "n-digit-token": "^2.2.0",
