--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.3.8",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.3.8",
@@ -45,14 +46,17 @@
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/nodemailer": "^6.4.7",
     "@types/uuid": "^9.0.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "joi": "^17.7.1",
     "n-digit-token": "^2.2.0",
+    "nodemailer": "^6.9.1",
     "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -74,6 +78,7 @@
     "@nestjs/schematics": "^9.0.4",
     "@nestjs/testing": "^9.3.8",
     "@types/bcrypt": "^5.0.0",
+    "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
