--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json --runInBand",
     "typeorm": "typeorm-ts-node-commonjs -d ./ormconfig.ts",
-    "migration:generate": "ts-node node_modules/.bin/typeorm migration:generate -d ormconfig.ts migrations/$npm_config_name",
+    "migration:generate": "ts-node node_modules/.bin/typeorm migration:generate -d ormconfig.ts ./migrations/$npm_config_name",
     "migration:run": "ts-node node_modules/.bin/typeorm migration:run -d ormconfig.ts",
     "migration:revert": "ts-node node_modules/.bin/typeorm migration:revert -d ormconfig.ts",
     "doc:serve": "npx compodoc -p tsconfig.json -w -s -r 8001",
@@ -35,6 +35,8 @@
     ]
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.282.0",
+    "@aws-sdk/lib-storage": "^3.282.0",
     "@hapi/joi": "^17.1.1",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.3.8",
@@ -56,6 +58,7 @@
     "ejs": "^3.1.8",
     "joi": "^17.7.1",
     "n-digit-token": "^2.2.0",
+    "nanoid": "^3.3.4",
     "nodemailer": "^6.9.1",
     "otplib": "^12.0.1",
     "passport": "^0.6.0",
@@ -81,6 +84,7 @@
     "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.13.0",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
