--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json --runInBand",
-    "typeorm": "typeorm-ts-node-commonjs -d ./ormconfig.ts",
-    "migration:generate": "ts-node node_modules/.bin/typeorm migration:generate -d ormconfig.ts ./migrations/$npm_config_name",
-    "migration:run": "ts-node node_modules/.bin/typeorm migration:run -d ormconfig.ts",
-    "migration:revert": "ts-node node_modules/.bin/typeorm migration:revert -d ormconfig.ts",
+    "migrate:dev": "prisma migrate dev --preview-feature",
+    "migrate:dev:create": "prisma migrate dev --create-only --preview-feature",
+    "migrate:reset": "prisma migrate reset --preview-feature",
+    "migrate:deploy": "npx prisma migrate deploy --preview-feature",
+    "migrate:status": "npx prisma migrate status --preview-feature",
+    "migrate:resolve": "npx prisma migrate resolve --preview-feature",
+    "prisma:studio": "npx prisma studio",
+    "prisma:generate": "npx prisma generate",
+    "prisma:generate:watch": "npx prisma generate --watch",
     "doc:serve": "npx compodoc -p tsconfig.json -w -s -r 8001",
     "doc:generate": "npx compodoc -p tsconfig.json",
     "prepare": "husky install",
@@ -47,7 +52,7 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.3.8",
     "@nestjs/swagger": "^6.2.1",
-    "@nestjs/typeorm": "^9.0.1",
+    "@prisma/client": "^4.11.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/nodemailer": "^6.4.7",
     "@types/uuid": "^9.0.0",
@@ -66,11 +71,11 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.9.0",
+    "prisma": "^4.11.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^4.1.2",
     "rxjs": "^7.8.0",
     "swagger-ui-express": "4.6.0",
-    "typeorm": "^0.3.12",
     "uuid": "^9.0.0",
     "winston": "^3.8.2"
   },
