--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
+    "geolib": "^3.3.3",
     "joi": "^17.7.1",
+    "lodash": "^4.17.21",
     "n-digit-token": "^2.2.0",
     "nanoid": "^3.3.4",
     "nodemailer": "^6.9.1",
@@ -90,6 +92,7 @@
     "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/lodash": "^4.14.192",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.13.0",
     "@types/passport-jwt": "^3.0.8",
