--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -13,6 +13,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm ci
+      - name: Install dependencies
+        run: npm ci
+      - name: Generate prisma client
+        run: npm run prisma:generate
       - name: Run build step
         run: npm run build
