--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.3.8",
+    "@nestjs/schedule": "^2.2.0",
     "@nestjs/swagger": "^6.2.1",
     "@prisma/client": "^4.11.0",
     "@types/jsonwebtoken": "^9.0.1",
