--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,6 @@ stages:
         azureSubscription: 'Azure subscription 1(a6573971-f85c-4631-90b6-623eee5a114d)'
         appType: 'webAppContainer'
         WebAppName: 'thehelpers'
-        DockerNamespace: 'hub.docker.com'
+        DockerNamespace: 'registry.hub.docker.com'
         DockerRepository: 'cyberproton/volunteer-backend'
         DockerImageTag: 'latest'
