--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.282.0",
     "@aws-sdk/lib-storage": "^3.282.0",
+    "@casl/ability": "^6.4.0",
+    "@casl/prisma": "^1.3.3",
     "@googlemaps/google-maps-services-js": "^3.3.27",
     "@hapi/joi": "^17.1.1",
     "@nestjs-modules/mailer": "^1.8.1",
@@ -53,7 +55,7 @@
     "@nestjs/platform-express": "^9.3.8",
     "@nestjs/schedule": "^2.2.0",
     "@nestjs/swagger": "^6.2.1",
-    "@prisma/client": "^4.11.0",
+    "@prisma/client": "^4.12.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/nodemailer": "^6.4.7",
     "@types/uuid": "^9.0.0",
@@ -68,13 +70,14 @@
     "lodash": "^4.17.21",
     "n-digit-token": "^2.2.0",
     "nanoid": "^3.3.4",
+    "nest-casl": "^1.8.6",
     "nodemailer": "^6.9.1",
     "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.9.0",
-    "prisma": "^4.11.0",
+    "prisma": "^4.12.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^4.1.2",
     "rxjs": "^7.8.0",
