--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "migrate:dev": "prisma migrate dev --preview-feature",
     "migrate:dev:create": "prisma migrate dev --create-only --preview-feature",
     "migrate:reset": "prisma migrate reset --preview-feature",
-    "migrate:deploy": "npx prisma migrate deploy --preview-feature",
-    "migrate:status": "npx prisma migrate status --preview-feature",
-    "migrate:resolve": "npx prisma migrate resolve --preview-feature",
-    "prisma:studio": "npx prisma studio",
-    "prisma:generate": "npx prisma generate",
-    "prisma:generate:watch": "npx prisma generate --watch",
-    "doc:serve": "npx compodoc -p tsconfig.json -w -s -r 8001",
-    "doc:generate": "npx compodoc -p tsconfig.json",
+    "migrate:deploy": "pnpx prisma migrate deploy --preview-feature",
+    "migrate:status": "pnpx prisma migrate status --preview-feature",
+    "migrate:resolve": "pnpx prisma migrate resolve --preview-feature",
+    "prisma:studio": "pnpx prisma studio",
+    "prisma:generate": "pnpx prisma generate",
+    "prisma:generate:watch": "pnpx prisma generate --watch",
+    "doc:serve": "pnpx compodoc -p tsconfig.json -w -s -r 8001",
+    "doc:generate": "pnpx compodoc -p tsconfig.json",
     "prepare": "husky install",
     "pre-commit": "lint-staged"
   },
@@ -56,9 +56,6 @@
     "@nestjs/schedule": "^2.2.0",
     "@nestjs/swagger": "^6.2.1",
     "@prisma/client": "^4.12.0",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/nodemailer": "^6.4.7",
-    "@types/uuid": "^9.0.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -105,6 +102,9 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/nodemailer": "^6.4.7",
+    "@types/uuid": "^9.0.0",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
