fix: skip husky

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ stages:
         command: 'build'
         Dockerfile: '**/Dockerfile'
         tags: latest
-        arguments: '--target builder --build-arg BUILDKIT_INLINE_CACHE=1 --cache-from docker.io/cyberproton/volunteer-backend-builder-stage:latest'
+        arguments: '--target builder --build-arg BUILDKIT_INLINE_CACHE=1 --build-arg HUSKY=0 --cache-from docker.io/cyberproton/volunteer-backend-builder-stage:latest'
         addPipelineData: false
         addBaseImageData: false
       env:
@@ -46,7 +46,7 @@ stages:
         tags: |
           $(tag)
           latest
-        arguments: '--build-arg BUILDKIT_INLINE_CACHE=1 --cache-from docker.io/cyberproton/volunteer-backend-builder-stage:latest --cache-from docker.io/cyberproton/volunteer-backend:latest'
+        arguments: '--build-arg BUILDKIT_INLINE_CACHE=1 --build-arg HUSKY=0 --cache-from docker.io/cyberproton/volunteer-backend-builder-stage:latest --cache-from docker.io/cyberproton/volunteer-backend:latest'
         addPipelineData: false
         addBaseImageData: false
       env:
