--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "prisma:generate:watch": "pnpx prisma generate --watch",
     "doc:serve": "pnpx compodoc -p tsconfig.json -w -s -r 8001",
     "doc:generate": "pnpx compodoc -p tsconfig.json",
-    "prepare": "husky install",
+    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\"",
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
