--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json --runInBand",
+    "pretest:int": "pnpm run test:db:restart",
+    "test:int": "dotenv -e .env.test -- jest --runInBand --no-cache --config ./jest-int.json",
+    "test:e2e": "jest --config ./jest-e2e.json --runInBand",
+    "test:db:restart": "docker-compose -f docker-compose.test.yml down && docker-compose -f docker-compose.test.yml up -d",
     "migrate:dev": "prisma migrate dev --preview-feature",
     "migrate:dev:create": "prisma migrate dev --create-only --preview-feature",
     "migrate:reset": "prisma migrate reset --preview-feature",
@@ -49,6 +52,7 @@
     "@nestjs/common": "^9.3.8",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.3.8",
+    "@nestjs/event-emitter": "^1.4.1",
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.3.8",
@@ -60,6 +64,7 @@
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "dotenv-cli": "^7.2.1",
     "ejs": "^3.1.8",
     "geolib": "^3.3.3",
     "joi": "^17.9.1",
