--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "prisma:generate:watch": "pnpx prisma generate --watch",
     "doc:serve": "pnpx compodoc -p tsconfig.json -w -s -r 8001",
     "doc:generate": "pnpx compodoc -p tsconfig.json",
-    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\"",
+    "prepare": "is-ci || husky install",
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
@@ -59,9 +59,6 @@
     "@nestjs/schedule": "^2.2.0",
     "@nestjs/swagger": "^6.2.1",
     "@prisma/client": "^4.12.0",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/nodemailer": "^6.4.7",
-    "@types/uuid": "^9.0.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -71,6 +68,7 @@
     "ejs": "^3.1.8",
     "geolib": "^3.3.3",
     "joi": "^17.9.1",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "n-digit-token": "^2.2.0",
     "nanoid": "^3.3.4",
@@ -100,13 +98,16 @@
     "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.192",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.13.0",
+    "@types/nodemailer": "^6.4.7",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "@types/pg": "^8.6.6",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.34.0",
@@ -114,6 +115,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
+    "is-ci": "^3.0.1",
     "jest": "^29.4.2",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^13.1.1",
