--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,9 @@ stages:
     - task: SSH@0
       inputs:
         sshEndpoint: 'VM SSH Service'
-        runOptions: 'commands'
-        commands: 'docker ps -q --filter "name=backend" | grep -q . && docker stop backend && docker rm -fv backend;docker pull cyberproton/volunteer-backend:latest;docker run --name backend -d cyberproton/volunteer'
+        runOptions: 'inline'
+        inline: |
+          docker ps -q --filter "name=backend" | grep -q . && docker stop backend && docker rm -fv backend
+          docker pull cyberproton/volunteer-backend:latest
+          docker run --name backend -d cyberproton/volunteer
         readyTimeout: '20000'
-    
