--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,6 @@ stages:
         runOptions: 'inline'
         inline: |
           docker ps -q --filter "name=backend" | grep -q . && docker stop backend && docker rm -fv backend
-          docker pull cyberproton/volunteer-backend:latest
-          docker run --name backend -d cyberproton/volunteer
+          docker pull docker.io/cyberproton/volunteer-backend:latest
+          docker run --name backend -d docker.io/cyberproton/volunteer
         readyTimeout: '20000'
