--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,15 @@ stages:
     pool:
       vmImage: ubuntu-latest
     steps:
+    - task: SSH@0
+      inputs:
+        sshEndpoint: 'VM SSH Service'
+        runOptions: 'inline'
+        inline: |
+          docker ps -q --filter "name=backend" | grep -q . && docker stop backend && docker rm -fv backend
+          docker pull cyberproton/volunteer-backend:latest
+          docker run --name backend -d cyberproton/volunteer-backend
+        readyTimeout: '20000'
     - task: Docker@2
       inputs:
         containerRegistry: 'Docker Hub'
@@ -39,6 +48,6 @@ stages:
         runOptions: 'inline'
         inline: |
           docker ps -q --filter "name=backend" | grep -q . && docker stop backend && docker rm -fv backend
-          docker pull docker.io/cyberproton/volunteer-backend:latest
-          docker run --name backend -d docker.io/cyberproton/volunteer
+          docker pull cyberproton/volunteer-backend:latest
+          docker run --name backend -d cyberproton/volunteer-backend
         readyTimeout: '20000'
