--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,5 +40,5 @@ stages:
         inline: |
           docker ps -q --filter "name=backend" | grep -q . && docker stop backend && docker rm -fv backend
           docker pull cyberproton/volunteer-backend:latest
-          docker run --name backend --env-file=.env -d cyberproton/volunteer-backend
+          docker run --name backend --env-file=.env -p 80:3000 -d cyberproton/volunteer-backend
         readyTimeout: '20000'
