--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,11 +34,13 @@ stages:
       env:
         DOCKER_BUILDKIT: 1
     - task: SSH@0
+      name: 'DeployToVM'
+      displayName: 'Deploy to VM'
       inputs:
         sshEndpoint: 'VM SSH Service'
         runOptions: 'inline'
         inline: |
           docker ps -q --filter "name=backend" | grep -q . && docker stop backend && docker rm -fv backend
           docker pull cyberproton/volunteer-backend:latest
-          docker run --name backend --env-file=.env -p 80:3000 -d cyberproton/volunteer-backend
+          docker run --name backend --env-file=.env -p 3000:3000 -d cyberproton/volunteer-backend
         readyTimeout: '20000'
