--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
     "@compodoc/compodoc": "^1.1.19",
+    "@faker-js/faker": "^7.6.0",
     "@nestjs/cli": "^9.4.2",
     "@nestjs/schematics": "^9.1.0",
     "@nestjs/testing": "^9.4.0",
@@ -126,6 +127,7 @@
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
+    "tslib": "^2.5.0",
     "typescript": "^5.0.4"
   },
   "jest": {
