--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "prisma:studio": "pnpx prisma studio",
     "prisma:generate": "pnpx prisma generate",
     "prisma:generate:watch": "pnpx prisma generate --watch",
-    "prisma:seed": "ts-node prisma/seed.ts",
+    "prisma:seed": "ts-node prisma/seed/seed.ts",
+    "prisma:reset-and-seed": "pnpx prisma migrate reset --force && ts-node prisma/seed/seed.ts",
+    "prisma:reset": "pnpx prisma migrate reset",
     "doc:serve": "pnpx compodoc -p tsconfig.json -w -s -r 8001",
     "doc:generate": "pnpx compodoc -p tsconfig.json",
     "prepare": "is-ci || husky install",
