--- a/package.json
+++ b/package.json
@@ -25,16 +25,17 @@
     "test:db:restart": "docker compose -f docker-compose.test.yml down && docker compose --env-file .env.test -f docker-compose.test.yml up -d && sleep 3",
     "migrate:dev": "prisma migrate dev --preview-feature",
     "migrate:dev:create": "prisma migrate dev --create-only --preview-feature",
-    "migrate:reset": "prisma migrate reset --preview-feature",
     "migrate:deploy": "pnpx prisma migrate deploy --preview-feature",
     "migrate:status": "pnpx prisma migrate status --preview-feature",
     "migrate:resolve": "pnpx prisma migrate resolve --preview-feature",
+    "migrate:squash": "pnpx prisma migrate diff --from-empty --to-schema-datamodel ./prisma/schema.prisma --script > ./prisma/migrations/000000000000_squashed_migrations/migration.sql && pnpx prisma migrate resolve --applied 000000000000_squashed_migrations",
+    "migrate:squash:clean": "rimraf prisma/migrations && ts-node scripts/create-squash-migration-file && pnpm run migrate:squash",
+    "migrate:reset": "prisma migrate reset --preview-feature",
     "prisma:studio": "pnpx prisma studio",
     "prisma:generate": "pnpx prisma generate",
     "prisma:generate:watch": "pnpx prisma generate --watch",
     "prisma:seed": "dotenv -e .env -- ts-node prisma/seed/seed.ts",
     "prisma:reset-and-seed": "dotenv -e .env -- pnpx prisma migrate reset --force && ts-node prisma/seed/seed.ts",
-    "prisma:reset": "pnpx prisma migrate reset",
     "doc:serve": "pnpx compodoc -p tsconfig.json -w -s -r 8001",
     "doc:generate": "pnpx compodoc -p tsconfig.json",
     "prepare": "is-ci || husky install",
