--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,8 @@
     "baseUrl": "./",
     "rootDir": "./",
     "incremental": true
+  },
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
   }
 }
