--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,28 @@
 APP_ENV=development
 APP_PORT=3000
-DB_HOST=0.0.0.0
+DB_URL=postgresql://username:password@localhost:5432/database_name?pool_timeout=30
+DB_SHADOW_URL=postgresql://username:password@localhost:5432/database_shadow_name?pool_timeout=30
+DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=example_db
-DB_USER=root
-DB_PASS=example
-AUTH_SECRET=example
+DB_NAME=database_name
+DB_USER=username
+DB_PASS=password
+AUTH_SECRET=auth_secret
 AUTH_ACCESS_TOKEN_LIFE_SEC=3600
-AUTH_REFRESH_TOKEN_LIFE_SEC=7200
-DEFAULT_ADMIN_USER_PASSWORD=admin-example
+AUTH_REFRESH_TOKEN_LIFE_SEC=432000
+OTP_LIFE_SEC=300
+OTP_PASSWORD_RESET_RENEWAL_SEC=30
+OTP_EMAIL_VERIFICATION_RENEWAL_SEC=30
+OTP_DISABLE_HASHING=false
+EMAIL_HOST=email_service_host
+EMAIL_PORT=465
+EMAIL_USER=email_service_username
+EMAIL_PASSWORD=email_service_password
+EMAIL_DEFAULT_FROM="'My Volunteer Organization' <volunteer@example.com>"
+FILE_ENDPOINT=s3_compatiable_service_endpoint
+FILE_REGION=s3_service_region
+FILE_ACCESS_KEY=s3_service_access_key
+FILE_SECRET_KEY=s3_service_secret_key
+FILE_BUCKET=s3_service_bucket
+GOOGLE_MAPS_API_KEY=google_maps_api_key
+
