--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "pretest:int": "pnpm run test:db:restart && dotenv -e .env.test -- prisma migrate deploy",
-    "test:int": "dotenv -e .env.test -- jest --runInBand --no-cache --config ./jest-int.json",
-    "test:e2e": "dotenv -e .env.test -- jest --runInBand --no-cache --config ./jest-e2e.json",
+    "pretest:int": "pnpm run test:db:restart && dotenv -e .env.test -- pnpm migrate:reset:force",
+    "test:int": "dotenv -e .env.test -- jest --runInBand --detectOpenHandles --no-cache --config ./jest-int.json",
+    "test:e2e": "dotenv -e .env.test -- jest --runInBand --detectOpenHandles --no-cache --config ./jest-e2e.json",
     "test:db:restart": "docker compose -f docker-compose.test.yml down && docker compose --env-file .env.test -f docker-compose.test.yml up -d && sleep 3",
     "migrate:dev": "prisma migrate dev --preview-feature",
     "migrate:dev:create": "prisma migrate dev --create-only --preview-feature",
@@ -31,6 +31,7 @@
     "migrate:squash": "pnpx prisma migrate diff --from-empty --to-schema-datamodel ./prisma/schema.prisma --script > ./prisma/migrations/000000000000_squashed_migrations/migration.sql && pnpx prisma migrate resolve --applied 000000000000_squashed_migrations",
     "migrate:squash:clean": "rimraf prisma/migrations && ts-node scripts/create-squash-migration-file && pnpm run migrate:squash",
     "migrate:reset": "prisma migrate reset --preview-feature",
+    "migrate:reset:force": "prisma migrate reset --preview-feature --force",
     "prisma:studio": "pnpx prisma studio",
     "prisma:generate": "pnpx prisma generate",
     "prisma:generate:watch": "pnpx prisma generate --watch",
