--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,5 +44,5 @@ stages:
         inline: |
           docker ps -q --filter "name=backend" | grep -q . && docker stop backend && docker rm -fv backend
           docker pull cyberproton/volunteer-backend:latest
-          docker run --name backend --env-file=.env -p 3000:3000 -d cyberproton/volunteer-backend
+          docker run --name backend --env-file=.env -p 3000:3000 -tid cyberproton/volunteer-backend
         readyTimeout: '20000'
