--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,12 @@ stages:
     pool:
       vmImage: ubuntu-latest
     steps:
+    - task: SSH@0
+      inputs:
+        sshEndpoint: 'TheHelpersBackend'
+        runOptions: 'commands'
+        commands: 'ls'
+        readyTimeout: '20000'
     - task: Docker@2
       inputs:
         containerRegistry: 'Docker Hub'
