Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,8 @@ stages:
       vmImage: ubuntu-latest
     steps:
     - task: SSH@0
+      name: 'TestVMConnection'
+      displayName: 'Test VM Connection'
       inputs:
         sshEndpoint: 'TheHelpersBackend'
         runOptions: 'commands'
