feat: shift and notification

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "migrate:status": "pnpx prisma migrate status --preview-feature",
     "migrate:resolve": "pnpx prisma migrate resolve --preview-feature",
     "migrate:squash": "pnpx prisma migrate diff --from-empty --to-schema-datamodel ./prisma/schema.prisma --script > ./prisma/migrations/000000000000_squashed_migrations/migration.sql && pnpx prisma migrate resolve --applied 000000000000_squashed_migrations",
+    "migrate:squash:no-apply": "pnpx prisma migrate diff --from-empty --to-schema-datamodel ./prisma/schema.prisma --script > ./prisma/migrations/000000000000_squashed_migrations/migration.sql",
     "migrate:squash:clean": "rimraf prisma/migrations && ts-node scripts/create-squash-migration-file && pnpm run migrate:squash",
+    "migrate:squash:clean:no-apply": "rimraf prisma/migrations && ts-node scripts/create-squash-migration-file && pnpm run migrate:squash:no-apply",
     "migrate:reset": "prisma migrate reset --preview-feature",
     "migrate:reset:force": "prisma migrate reset --preview-feature --force",
     "prisma:studio": "pnpx prisma studio",
