--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "dotenv": "^16.0.3",
     "dotenv-cli": "^7.2.1",
     "ejs": "^3.1.9",
+    "firebase-admin": "^11.9.0",
     "geolib": "^3.3.3",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
