--- a/package.json
+++ b/package.json
@@ -51,98 +51,101 @@
     ]
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.332.0",
-    "@aws-sdk/lib-storage": "^3.332.0",
+    "@aws-sdk/client-s3": "^3.363.0",
+    "@aws-sdk/lib-storage": "^3.363.0",
     "@casl/ability": "^6.5.0",
     "@casl/prisma": "^1.4.0",
-    "@googlemaps/google-maps-services-js": "^3.3.30",
+    "@googlemaps/google-maps-services-js": "^3.3.32",
     "@nestjs-modules/mailer": "^1.8.1",
-    "@nestjs/common": "^9.4.1",
-    "@nestjs/config": "^2.3.2",
-    "@nestjs/core": "^9.4.1",
-    "@nestjs/event-emitter": "^1.4.1",
-    "@nestjs/jwt": "^10.0.3",
-    "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.4.1",
-    "@nestjs/schedule": "^2.2.2",
-    "@nestjs/swagger": "^6.3.0",
-    "@prisma/client": "^4.16.1",
+    "@nestjs/common": "^10.0.5",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.0.5",
+    "@nestjs/event-emitter": "^2.0.0",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/passport": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.5",
+    "@nestjs/platform-socket.io": "^10.0.5",
+    "@nestjs/schedule": "^3.0.1",
+    "@nestjs/swagger": "^7.1.1",
+    "@nestjs/websockets": "^10.0.5",
+    "@prisma/client": "^4.16.2",
     "@tensorflow/tfjs-node": "^4.8.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "dayjs": "^1.11.7",
-    "dotenv": "^16.0.3",
+    "dayjs": "^1.11.9",
+    "dotenv": "^16.3.1",
     "dotenv-cli": "^7.2.1",
     "ejs": "^3.1.9",
     "firebase-admin": "^11.9.0",
-    "geolib": "^3.3.3",
+    "geolib": "^3.3.4",
     "joi": "^17.9.2",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "n-digit-token": "^2.2.0",
     "nanoid": "^3.3.6",
-    "nest-casl": "^1.8.8",
-    "nodemailer": "^6.9.2",
+    "nest-casl": "^1.8.10",
+    "nodemailer": "^6.9.3",
     "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.11.0",
-    "prisma": "^4.16.1",
+    "pg": "^8.11.1",
+    "prisma": "^4.16.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.1",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.1",
     "swagger-ui-express": "4.6.3",
     "uuid": "^9.0.0",
-    "winston": "^3.8.2"
+    "winston": "^3.9.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.3",
-    "@commitlint/config-conventional": "^17.6.3",
-    "@compodoc/compodoc": "^1.1.19",
-    "@faker-js/faker": "^8.0.1",
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
+    "@compodoc/compodoc": "^1.1.21",
+    "@faker-js/faker": "^8.0.2",
     "@nestjs/cli": "^9.5.0",
     "@nestjs/schematics": "^9.2.0",
-    "@nestjs/testing": "^9.4.1",
+    "@nestjs/testing": "^10.0.5",
     "@types/bcrypt": "^5.0.0",
     "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.1",
+    "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/lodash": "^4.14.194",
+    "@types/lodash": "^4.14.195",
     "@types/mime-db": "^1.43.1",
     "@types/mime-types": "^2.1.1",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.16.1",
-    "@types/nodemailer": "^6.4.7",
+    "@types/node": "^18.16.19",
+    "@types/nodemailer": "^6.4.8",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
-    "@types/pg": "^8.6.6",
+    "@types/pg": "^8.10.2",
     "@types/supertest": "^2.0.12",
-    "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
-    "eslint": "^8.40.0",
+    "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
     "is-ci": "^3.0.1",
-    "jest": "^29.5.0",
+    "jest": "^29.6.0",
     "jest-sonar-reporter": "^2.0.0",
-    "lint-staged": "^13.2.2",
+    "lint-staged": "^13.2.3",
     "prettier": "^2.8.8",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.2",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "tslib": "^2.5.1",
-    "typescript": "^5.0.4"
+    "tslib": "^2.6.0",
+    "typescript": "^5.1.6"
   },
   "jest": {
     "testResultsProcessor": "jest-sonar-reporter",
