--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "csv": "^6.3.1",
+    "csv-parse": "^5.4.0",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.2.1",
