--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "pretest:int": "pnpm run test:db:restart && dotenv -e .env.test -- pnpx prisma migrate reset --preview-feature --force --skip-generate --skip-seed",
-    "test:int": "dotenv -e .env.test -- jest --runInBand --detectOpenHandles --no-cache --config ./jest-int.json",
+    "pretest:int": "pnpm run test:container:restart && dotenv -e .env.test -- pnpx prisma migrate reset --preview-feature --force --skip-generate --skip-seed",
+    "test:container:restart": "docker compose -f docker-compose.test.yml down && docker compose --env-file .env.test -f docker-compose.test.yml up -d && sleep 3",
+    "test:int": "dotenv -e .env.test -- jest --runInBand --detectOpenHandles --no-cache --config --verbose ./jest-int.json",
     "test:e2e": "dotenv -e .env.test -- jest --runInBand --detectOpenHandles --no-cache --config ./jest-e2e.json",
-    "test:db:restart": "docker compose -f docker-compose.test.yml down && docker compose --env-file .env.test -f docker-compose.test.yml up -d && sleep 3",
     "migrate:dev": "prisma migrate dev --preview-feature",
     "migrate:dev:create": "prisma migrate dev --create-only --preview-feature",
     "migrate:deploy": "pnpx prisma migrate deploy --preview-feature",
