--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "start": "nest start --watch --preserveWatchOutput",
     "start:dev": "nest start --watch --preserveWatchOutput",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/src/main",
+    "start:prod": "node dist/main",
     "cli:dev": "ts-node -r tsconfig-paths/register src/cli.ts",
-    "cli:prod": "node dist/src/cli.js",
+    "cli:prod": "node dist/cli.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --runInBand",
@@ -51,8 +51,8 @@
     ]
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.379.1",
-    "@aws-sdk/lib-storage": "^3.379.1",
+    "@aws-sdk/client-s3": "^3.383.0",
+    "@aws-sdk/lib-storage": "^3.383.0",
     "@casl/ability": "^6.5.0",
     "@casl/prisma": "^1.4.1",
     "@googlemaps/google-maps-services-js": "^3.3.35",
@@ -68,7 +68,7 @@
     "@nestjs/schedule": "^3.0.1",
     "@nestjs/swagger": "^7.1.6",
     "@nestjs/websockets": "^10.1.3",
-    "@prisma/client": "^5.1.0",
+    "@prisma/client": "^5.1.1",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
@@ -95,12 +95,12 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.2",
-    "prisma": "^5.1.0",
+    "prisma": "^5.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.1",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.7.1",
-    "swagger-ui-express": "4.6.3",
+    "socket.io": "^4.7.2",
+    "swagger-ui-express": "5.0.0",
     "uuid": "^9.0.0",
     "winston": "^3.10.0"
   },
@@ -109,9 +109,11 @@
     "@commitlint/config-conventional": "^17.6.7",
     "@compodoc/compodoc": "^1.1.21",
     "@faker-js/faker": "^8.0.2",
-    "@nestjs/cli": "^9.5.0",
-    "@nestjs/schematics": "^9.2.0",
+    "@nestjs/cli": "^10.1.11",
+    "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.1.3",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.74",
     "@types/bcrypt": "^5.0.0",
     "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
@@ -128,10 +130,10 @@
     "@types/pg": "^8.10.2",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
     "eslint": "^8.46.0",
-    "eslint-config-prettier": "^8.9.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
@@ -139,7 +141,7 @@
     "jest": "^29.6.2",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^13.2.3",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
