--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,14 @@
     "strictFunctionTypes": true,
     "noImplicitOverride": true,
     "skipLibCheck": true,
-    "target": "es2017",
+    "target": "es2022",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
     "rootDir": "./",
+    "paths": {
+      "@app/*": ["src/*"]
+    },
     "incremental": true
   },
   "ts-node": {
