--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "nest start --watch --preserveWatchOutput",
     "start:dev": "nest start --watch --preserveWatchOutput",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "cli:dev": "ts-node -r tsconfig-paths/register src/cli.ts",
     "cli:prod": "node dist/cli.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
