feat: reset password

--- a/.env.template
+++ b/.env.template
@@ -10,10 +10,10 @@ DB_PASS=password
 AUTH_SECRET=auth_secret
 AUTH_ACCESS_TOKEN_LIFE_SEC=3600
 AUTH_REFRESH_TOKEN_LIFE_SEC=432000
-OTP_LIFE_SEC=300
-OTP_PASSWORD_RESET_RENEWAL_SEC=30
-OTP_EMAIL_VERIFICATION_RENEWAL_SEC=30
-OTP_DISABLE_HASHING=false
+TOKEN_LIFE_SEC=300
+TOKEN_PASSWORD_RESET_RENEWAL_SEC=30
+TOKEN_EMAIL_VERIFICATION_RENEWAL_SEC=30
+TOKEN_DISABLE_HASHING=false
 EMAIL_HOST=email_service_host
 EMAIL_PORT=465
 EMAIL_USER=email_service_username
