--- a/package.json
+++ b/package.json
@@ -78,10 +78,12 @@
     "dotenv-cli": "^7.2.1",
     "ejs": "^3.1.9",
     "firebase-admin": "^11.10.1",
+    "form-data": "^4.0.0",
     "geolib": "^3.3.4",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
+    "mailgun.js": "^9.2.1",
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "n-digit-token": "^2.2.0",
