--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,7 @@
 APP_ENV=test
 APP_PORT=3000
-DB_URL=postgresql://test:password@localhost:5432/test?pool_timeout=30
+DB_URL=postgresql://test:password@localhost:5432/test
+DB_DIRECT_URL=postgresql://test:password@localhost:5432/test
 DB_PORT=5432
 DB_NAME=test
 DB_USER=test
