--- a/package.json
+++ b/package.json
@@ -50,30 +50,35 @@
     ]
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.397.0",
-    "@aws-sdk/lib-storage": "^3.397.0",
+    "@aws-sdk/client-s3": "^3.410.0",
+    "@aws-sdk/lib-storage": "^3.410.0",
     "@casl/ability": "^6.5.0",
     "@casl/prisma": "^1.4.1",
-    "@googlemaps/google-maps-services-js": "^3.3.36",
+    "@googlemaps/google-maps-services-js": "^3.3.37",
     "@nestjs-modules/mailer": "^1.9.1",
-    "@nestjs/common": "^10.2.1",
-    "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.2.1",
+    "@nestjs/axios": "^3.0.0",
+    "@nestjs/cache-manager": "^2.1.0",
+    "@nestjs/common": "^10.2.5",
+    "@nestjs/config": "^3.0.1",
+    "@nestjs/core": "^10.2.5",
     "@nestjs/event-emitter": "^2.0.2",
-    "@nestjs/jwt": "^10.1.0",
-    "@nestjs/passport": "^10.0.1",
-    "@nestjs/platform-express": "^10.2.1",
-    "@nestjs/platform-socket.io": "^10.2.1",
+    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/passport": "^10.0.2",
+    "@nestjs/platform-express": "^10.2.5",
+    "@nestjs/platform-socket.io": "^10.2.5",
     "@nestjs/schedule": "^3.0.3",
-    "@nestjs/swagger": "^7.1.8",
-    "@nestjs/websockets": "^10.2.1",
+    "@nestjs/swagger": "^7.1.11",
+    "@nestjs/terminus": "^10.0.1",
+    "@nestjs/websockets": "^10.2.5",
     "@prisma/client": "^5.2.0",
-    "axios": "^1.4.0",
+    "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
+    "cache-manager": "^5.2.3",
+    "cache-manager-ioredis-yet": "^1.2.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "csv": "^6.3.1",
-    "csv-parse": "^5.4.0",
+    "csv": "^6.3.3",
+    "csv-parse": "^5.5.0",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.3.0",
@@ -81,8 +86,9 @@
     "firebase-admin": "^11.10.1",
     "form-data": "^4.0.0",
     "geolib": "^3.3.4",
-    "joi": "^17.9.2",
-    "jsonwebtoken": "^9.0.1",
+    "ioredis": "^5.3.2",
+    "joi": "^17.10.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mailgun.js": "^9.2.1",
     "mime-db": "^1.52.0",
@@ -90,7 +96,7 @@
     "n-digit-token": "^2.2.0",
     "nanoid": "^3.3.6",
     "nest-casl": "^1.8.11",
-    "nodemailer": "^6.9.4",
+    "nodemailer": "^6.9.5",
     "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -110,45 +116,46 @@
     "@commitlint/config-conventional": "^17.7.0",
     "@compodoc/compodoc": "^1.1.21",
     "@faker-js/faker": "^8.0.2",
-    "@nestjs/cli": "^10.1.13",
+    "@nestjs/cli": "^10.1.17",
     "@nestjs/schematics": "^10.0.2",
-    "@nestjs/testing": "^10.2.1",
+    "@nestjs/testing": "^10.2.5",
     "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.78",
+    "@swc/core": "^1.3.84",
     "@types/bcrypt": "^5.0.0",
     "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/lodash": "^4.14.197",
+    "@types/k6": "^0.46.2",
+    "@types/lodash": "^4.14.198",
     "@types/mime-db": "^1.43.1",
     "@types/mime-types": "^2.1.1",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.17.8",
-    "@types/nodemailer": "^6.4.9",
+    "@types/node": "^18.17.15",
+    "@types/nodemailer": "^6.4.10",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
     "@types/pg": "^8.10.2",
     "@types/supertest": "^2.0.12",
-    "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "eslint": "^8.47.0",
+    "@types/uuid": "^9.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
     "is-ci": "^3.0.1",
-    "jest": "^29.6.3",
+    "jest": "^29.6.4",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^14.0.1",
-    "prettier": "^3.0.2",
+    "prettier": "^3.0.3",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   }
 }
