feat: update deps

--- a/.env.test
+++ b/.env.test
@@ -6,3 +6,9 @@ DB_PORT=5432
 DB_NAME=test
 DB_USER=test
 DB_PASS=password
+CACHE_PROVIDER=redis
+CACHE_URL=redis://default:password@localhost:6379
+CACHE_HOST=localhost
+CACHE_PORT=6379
+CACHE_USERNAME=default
+CACHE_PASSWORD=password
