--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -4,8 +4,13 @@ services:
   pgsqldb:
     image: postgres:15.2
     environment:
-      POSTGRES_USER: "${DB_USER}"
-      POSTGRES_PASSWORD: "${DB_PASS}"
-      POSTGRES_DB: "${DB_NAME}"
+      POSTGRES_USER: '${DB_USER}'
+      POSTGRES_PASSWORD: '${DB_PASS}'
+      POSTGRES_DB: '${DB_NAME}'
     ports:
       - 5432:5432
+  cache:
+    image: redis:7.2-alpine
+    ports:
+      - '${CACHE_PORT}:${CACHE_PORT}'
+    command: redis-server --port ${CACHE_PORT} --save 20 1 --loglevel warning --requirepass ${CACHE_PASSWORD}
