--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "cache-manager-ioredis-yet": "^1.2.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "compression": "^1.7.4",
     "csv": "^6.3.3",
     "csv-parse": "^5.5.0",
     "dayjs": "^1.11.9",
